tests/spec/build/snapshots/aliased_error_err_slot_lowers.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

type MyErr = error

func parse() (int, error) {
	return 1, nil
}

func main() {
	parse()
}
