tests/spec/build/snapshots/assert_type_emits_concrete_type_arg.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"fmt"
	"github.com/user/myproject/store"
)

func main() {
	raw := store.GetValue("count")
	if n, ok := raw.(int); ok {
		fmt.Print(n)
	} else {
		fmt.Print("not an int")
	}
}
