tests/spec/build/snapshots/bound_option_from_generic_callee_keeps_tagged_return.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Face interface {
}

func Lookup(_ int) Face {
	return nil
}

func Resolve[T any, R any](a T, f func(T) (R, bool)) (R, bool) {
	return f(a)
}

func main() {
	cb := Lookup
	ret, ret_1 := Resolve(0, func(arg0 int) (Face, bool) {
		raw := cb(arg0)
		option := lisette.OptionFromNilable[Face](raw, lisette.IsNilInterface(raw))
		if option.Tag == lisette.OptionSome {
			return option.SomeVal, true
		}
		return nil, false
	})
	var rez lisette.Option[Face]
	if ret_1 && !lisette.IsNilInterface(ret) {
		rez = lisette.MakeOptionSome[Face](ret)
	} else {
		rez = lisette.MakeOptionNone[Face]()
	}
	_ = rez
}
