tests/spec/build/snapshots/bound_partial_from_generic_method_keeps_tagged_return.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Face interface {
}

func Fallible(arg int) (int, Face) {
	return arg, nil
}

type Holder[T any] struct {
	Val T
}

func Holder_Resolve[T any, R any, E any](self Holder[T], f func(T) lisette.Partial[R, E]) lisette.Partial[R, E] {
	return f(self.Val)
}

func main() {
	cb := Fallible
	rez := Holder_Resolve(Holder[int]{Val: 4}, func(arg0 int) lisette.Partial[int, Face] {
		ret, ret_1 := cb(arg0)
		if ret_1 != nil {
			return lisette.MakePartialBoth[int, Face](ret, ret_1)
		} else {
			return lisette.MakePartialOk[int, Face](ret)
		}
	})
	_ = rez
}
